[project]
name = "python-poetry-guide"
version = "0.1.0"
description = ""
authors = [
    {name = "abiwinanda",email = "abiwinanda@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "python_poetry_guide", from = "src"}]

[tool.poetry.scripts]
project = "python_poetry_guide.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
